--- a/setup.cfg
+++ b/setup.cfg
@@ -21,3 +21,8 @@ default_section = THIRDPARTY
 skip = *.ipynb
 quiet-level = 3
 ignore-words-list = patten,confectionary,nd,ty,formating,dows
+
+
+[flake8]
+per-file-ignores =
+    mmpretrain/configs/*: F401,F403,F405
